@@ -1,13 +1,13 @@
 # Created by Jevoom
 #
 # 22-Aug-2012
-#     Set log_daemon to true in sbin/jserviced
+#     Tweaks to sclient.rb to fix daemon problems or help uncover them at least
 
 module Jerbil
-  # version set to 1.0.14
-  Version = '1.0.14'
+  # version set to 1.0.15
+  Version = '1.0.15'
   # date set to 22-Aug-2012
   Version_Date = '22-Aug-2012'
-  #ident string set to: jerbil-1.0.14 22-Aug-2012
-  Ident = 'jerbil-1.0.14 22-Aug-2012'
+  #ident string set to: jerbil-1.0.15 22-Aug-2012
+  Ident = 'jerbil-1.0.15 22-Aug-2012'
 end
